deploy/zigbee2mqtt/templates/zigbee2mqtt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-collection@kubernetescrd
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  rules:
  - host: zigbee2mqtt.nuc.local
    http:
      paths:
      - backend:
          service:
            name: zigbee2mqtt
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
